@@ -10,6 +10,7 @@ Version 1.17.2 (rgerhards), 2007-07-2?
 - did some preparation in msg.c for advanced multithreading - placed the
   hooks, but not yet any active code
 - worked further on modularization
+- added $ModLoad MySQL (dummy) config directive
 ---------------------------------------------------------------------------
 Version 1.17.1 (rgerhards), 2007-07-20
 - fixed a bug that caused make install to install rsyslogd and rklogd under
